<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchDetailFragment">

    <!-- Hardcoded temporary details -->
    <ImageView
        android:id="@+id/brewery_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/brewery_details"
        app:layout_constraintBottom_toTopOf="@+id/brewery_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic[7]" />

    <TextView
        android:id="@+id/brewery_description"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brewery_image" />

    <Button
        android:id="@+id/write_review_button"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/write_review_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brewery_description" />

    <Button
        android:id="@+id/google_maps_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:drawableEnd="@drawable/google_maps_icon"
        android:text="@string/google_maps_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/write_review_button" />

    <Button
        android:id="@+id/check_in_button"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:drawableEnd="@drawable/facebook_icon"
        android:text="@string/check_in__button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_maps_button" />

    <Button
        android:id="@+id/user_reviews_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/user_reviews_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>