<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchDetailFragment">

    <TextView
        android:id="@+id/brewery_description"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:autoLink="all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/write_review_button"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/write_review_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brewery_description" />

    <Button
        android:id="@+id/google_maps_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:drawableEnd="@drawable/google_maps_icon"
        android:text="@string/google_maps_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/write_review_button" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/share_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_maps_button" />

    <Button
        android:id="@+id/user_reviews_button"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/user_reviews_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_button" />

</android.support.constraint.ConstraintLayout>