<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SearchActivity"
    tools:showIn="@layout/activity_search">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-128dp"
            android:layout_weight="1"
            android:layout_marginVertical="20dp"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_below="@+id/imageView"
            android:text="Search" />

        <RadioGroup
            android:layout_below="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/by_city_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_city_text"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/by_state_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_state_text"
                />

            <RadioButton
                android:id="@+id/by_name_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_name_text"
                />

        </RadioGroup>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>