<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/search_main"
        android:gravity="center_horizontal">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="128dp"
            android:layout_marginVertical="20dp"
            android:src="@drawable/beer"
            android:layout_alignParentTop="true"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/search_input_and_button"
            android:layout_below="@id/imageView"
            android:gravity="center_horizontal|center_vertical"
            >
            <AutoCompleteTextView
                android:id="@+id/autoCompleteSearchInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:ems="12"
                android:inputType="text"
                android:hint="Enter Search Details"
                >
                <requestFocus/>
            </AutoCompleteTextView>
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search"
                />

        </LinearLayout>


        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_below="@id/search_input_and_button"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/by_city_button">

            <RadioButton
                android:id="@+id/by_city_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_city_text" />

            <RadioButton
                android:id="@+id/by_state_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_state_text" />

            <RadioButton
                android:id="@+id/by_name_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_name_text" />

        </RadioGroup>



    </RelativeLayout>

</android.support.constraint.ConstraintLayout>